<resources>

    <string name="app_name">MFcloud</string>
    <string name="login_button">login</string>
    <string name="edit_name">Enter your name</string>
    <string name="edit_password">Enter the password</string>
    <string name="connect_button">Connect</string>
    <string name="edit_server_addres">Enter the server address</string>
    <string name="edit_server_port">Port</string>

</resources>
