<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connect" >

    <Button
        android:id="@+id/button_connect"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="buttonConnect_onClick"
        android:text="@string/connect_button" />
    
    <EditText
        android:id="@+id/editServerAddress"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_edit_address"
        android:ems="10"
        android:hint="@string/edit_server_addres"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    

    <EditText
        android:id="@+id/editServerPort"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_edit_port"
        android:ems="10"
        android:hint="@string/edit_server_port"
        android:inputType="number" />

</FrameLayout>