<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization" >

    <Button
        android:id="@+id/button_login"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="buttonLogin_onClick"
        android:text="@string/login_button" />
    
     <EditText
         android:id="@+id/editLogin"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/top_edit_login"
         android:ems="10"
         android:hint="@string/edit_name"
         android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_edit_password"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray" >

        <requestFocus />
    </EditText>

   

</FrameLayout>